# DeepReservoir

./: .gitignore  Abstract_HydroML.docx  Clipped_NAVAJORESERVOIR08-18-2024T16.48.23.csv  DQN_reservoir_agent_based_state_propagation - Variation#2.ipynb  DRL Optimization.pptx  Github PAT.txt  Pay_Stub_Dec_12_AOLDataStreaming.htm  Progress Presentation- DRL for Reservoir Management.pptx  README.md  Schwenk_poster.pptx  TD3_agent_simple_binary_reward - Variation # 2.ipynb  deepreservoir-env.yml  deepreservoir-full.yml  environment.yml  events.out.tfevents.1712600497.pn2032442.17004.0  id_rsa.pub  pyproject.toml  reserv_imitating_susan.py  reserv_navajo.py  reserv_opt.py  reserv_trial.py  reserv_trial_PPO.py  reserv_trial_TD3.py  reservoir.ipynb  reservoir_0.py  reservoir_TD3_agent_based_state_propagation- binary reward (agent saved every 500 episodes.ipynb  reservoir_TD3_agent_based_state_propagation-reward variation (deviation from target storage).ipynb  reservoir_agent_based_state_propagation - Variation#2.ipynb  reservoir_agent_based_state_propagation.ipynb  reservoir_dqn__tweaked_binary_reward_discrete_actions_500_1000_1500_2000_2500_3000cfs.ipynb  reservoir_dqn_discrete_actions_1000_2000_3000cfs.ipynb  reservoir_dqn_discrete_actions_1000_2000_4000cfs.ipynb  reservoir_navajo.py  reservoir_navajo_trial.py  reservoir_simple_binary_reward.ipynb  reservoir_simple_binary_reward_1.ipynb  reservoir_untrained_td3_model.ipynb  reservoir_untrained_td3_model.py  science-poster-template.pptx  simple_optimization.py  (+2 more)
data/: 2019_elevation_area_capacity.pkl  (+2 more)
results/: PPO_latest.py  (+11 more)
(+89 files in other folders)
